--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ before_install:
     - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
     - pod --version
 #    - pod repo remove master
-#    - pod setup --silent > /dev/null
-#    - pod repo update --silent
+    - pod setup --silent > /dev/null
+    - pod repo update --silent
     - xcpretty --version
     - xcodebuild -version
     - xcodebuild -showsdks
