--- a/QRCodeUIKitBundle/Info.plist
+++ b/QRCodeUIKitBundle/Info.plist
@@ -13,9 +13,9 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.9</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>201812030002</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018年 Zero Status. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
